[tool.poetry]
name = "gisaug"
version = "0.1.0"
description = "A library for Time Series augmentation. Created for geological data, but can fit any type of Time Series as well"
authors = ["Vladimir Shitov <vladimirshitov98@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
